<resources>
    <string name="app_name">MovieFinder</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="show_all">Show all</string>
    <string name="movie_image">movie image</string>
    <string name="item_title">item title</string>
    <string name="gambar_film">Gambar film</string>
    <string name="title">Title</string>
    <string name="gambar_profil">gambar profil</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="genres">Genres</string>
    <string name="genre_action">Action</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_western">Western</string>
</resources>